// Bun Snapshot v1, https://goo.gl/fbAQLP

exports[`Generating webpack stats 5 {"format":"array-push","expected":"array-push"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 25250,
      "name": "main-2c458a0c7e378af1ec1a.js",
      "normalized": "main-*.js",
      "size": 70959,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-webpack-v5-array-push",
  "bundler": {
    "name": "webpack",
    "version": "5.96.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-2c458a0c7e378af1ec1a.js",
      ],
      "id": "792",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-792",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating webpack stats 5 {"format":"commonjs","expected":"cjs"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 25250,
      "name": "main-2c458a0c7e378af1ec1a.js",
      "normalized": "main-*.js",
      "size": 70959,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-webpack-v5-cjs",
  "bundler": {
    "name": "webpack",
    "version": "5.96.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-2c458a0c7e378af1ec1a.js",
      ],
      "id": "792",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-792",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating webpack stats 5 {"format":"module","expected":"esm"} matches the snapshot 1`] = `
{
  "assets": [
    {
      "gzipSize": 25250,
      "name": "main-2c458a0c7e378af1ec1a.js",
      "normalized": "main-*.js",
      "size": 70959,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringContaining "test-webpack-v5-esm",
  "bundler": {
    "name": "webpack",
    "version": "5.96.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-2c458a0c7e378af1ec1a.js",
      ],
      "id": "792",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-792",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;

exports[`Generating webpack stats 5 source maps are enabled does not include any source maps 1`] = `
{
  "assets": [
    {
      "gzipSize": 25250,
      "name": "main-2c458a0c7e378af1ec1a.js",
      "normalized": "main-*.js",
      "size": 70959,
    },
  ],
  "builtAt": Any<Number>,
  "bundleName": StringNotContaining ".map",
  "bundler": {
    "name": "webpack",
    "version": "5.96.1",
  },
  "chunks": [
    {
      "dynamicImports": [],
      "entry": true,
      "files": [
        "main-2c458a0c7e378af1ec1a.js",
      ],
      "id": "792",
      "initial": true,
      "names": [
        "main",
      ],
      "uniqueId": "0-792",
    },
  ],
  "duration": Any<Number>,
  "modules": [
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "./test-apps/webpack/src/main.js + 1 modules",
      "size": 395,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "../node_modules/.pnpm/lodash@4.17.21/node_modules/lodash/lodash.js",
      "size": 544098,
    },
    {
      "chunkUniqueIds": [],
      "name": "./test-apps/webpack/src/getRandomNumber.js",
      "size": 106,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/global",
      "size": 221,
    },
    {
      "chunkUniqueIds": [
        "0-792",
      ],
      "name": "webpack/runtime/node module decorator",
      "size": 123,
    },
  ],
  "outputPath": StringContaining "/distV5",
  "plugin": {
    "name": StringMatching "@codecov/webpack-plugin",
    "version": "1.5.1",
  },
  "version": "3",
}
`;
